--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClass = 'app.FileTreeAsJson'
+}
+
 dependencies {
     implementation 'ch.qos.logback:logback-classic:1.4.5'
     implementation 'info.picocli:picocli:4.7.0'
