--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,32 @@ plugins {
     id 'java'
     id 'application'
     id "io.freefair.lombok" version "6.6"
+    // https://github.com/qoomon/gradle-git-versioning-plugin
+    id 'me.qoomon.git-versioning' version '6.1.1'
     id "io.github.itzg.github-releaser" version "0.1.1"
 }
 
 group 'io.github.itzg'
-version '1.0-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
+gitVersioning.apply {
+    refs {
+        tag('.+') {
+            version = '${ref}'
+        }
+        branch('main') {
+            version = '0.0.0-${describe.tag}-SNAPSHOT'
+        }
+        branch('.+') {
+            version = '0.0.0-${ref}-SNAPSHOT'
+        }
+    }
+
+    // optional fallback configuration in case of no matching ref configuration
+    rev {
+        version = '${commit}'
+    }
+
+}
 
 repositories {
     mavenCentral()
