Group minor and patch updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,11 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    groups:
+      patches:
+        patterns:
+          - "*"
+        update-types:
+          - patch
+          - minor
+
